...
            </objects>
            <point key="canvasLocation" x="-548" y="189"/>
        </scene>
        <!--Team-->
        <scene sceneID="Lmm-cu-bar">
            <objects>
                <viewControllerPlaceholder storyboardIdentifier="TeamVC" storyboardName="Team" id="vvI-a9-g0f" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Team" image="team" id="3De-v5-6oV"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bNz-fB-uwC" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="241" y="-3"/>
        </scene>
        <!--Settings-->
        <scene sceneID="yfb-CD-34I">
            <objects>
                <viewControllerPlaceholder storyboardName="Settings" id="KPG-Cy-UJe" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="gear" id="KI1-aN-TxB"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="rjJ-fi-6x3" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="255" y="335"/>
        </scene>
...
