...
            </objects>
            <point key="canvasLocation" x="342" y="215"/>
        </scene>
        <!--MemberVC-->
        <scene sceneID="e5b-ve-52a">
            <objects>
                <viewController id="LaS-9O-e5l" customClass="MemberVC" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="GCx-j5-hJZ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfJ-rc-IOh"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ruE-nh-GGA">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
